--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
   "extends": "airbnb",
   "env": {
     "jest": true
+  },
+  "rules": {
+    "comma-dangle": "off",
+    "react/jsx-filename-extension": "off"
   }
 }
