--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-test-renderer": "^15.5.4"
   }
 }
