--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/mattiaerre/jest-do-it#readme",
   "dependencies": {
     "babel-core": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -35,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
+    "node-fetch": "^1.6.3",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-test-renderer": "^15.5.4"
