--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.6.1",
-    "node-fetch": "^1.6.3",
-    "prop-types": "^15.5.8",
+    "node-fetch": "^1.7.1",
+    "npm-check": "^5.4.4",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4"
