--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
+    "jest-fetch-mock": "^1.1.1",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.6.1",
     "node-fetch": "^1.7.1",
